# libnss-dummy

./: .gitignore  LICENSE  Makefile.am  README.md  configure.ac  libnss-dummy.c
