lib_LTLIBRARIES = libnss_dummy.la

libnss_dummy_la_SOURCES = libnss-dummy.c
libnss_dummy_la_LDFLAGS = -avoid-version -module -export-dynamic -shrext .so.2

MAINTAINERCLEANFILES = Makefile.in aclocal.m4 compile config.h.in config.h.in~ config.guess config.sub configure depcomp install-sh missing ltmain.sh
